<resources>
    <string name="app_name">Maybe</string>
    <string name="index">index</string>
    <string name="db_file_id">dbFileId</string>
    <string name="edit_mode_on">Edit Mode</string>
    <string name="edit_mode_off">Playing Mode</string>
    <string name="delete_nothing">Select playlists/musics before deleting</string>
    <string name="add_nothing">Select musics before adding to a playlist</string>
    <string name="tag_id">tag_id</string>
    <string name="tag_selected">tag_selected</string>
    <string name="add_a_playlist">Add a playlist</string>

    <!--Preferences-->
    <string name="preference_file_key">app_preferences</string>
    <string name="db_version">db_version</string>
    <string name="current_category_id">current_category_id</string>
    <string name="current_name">current_name</string>
    <string name="sort">sort</string>
    <string name="current_file_id">current_file_id</string>
    <string name="current_timestamp">current_timestamp</string>

    <string name="pref_key_resetColors">pref_key_resetColors</string>
    <string name="pref_title_resetColors">Reset Colors</string>
    <string name="pref_summary_resetColors"></string>


    <!--Colors-->

    <!--Keys-->
    <string name="key_category_primary_color">key_category_primary_color</string>
    <string name="key_category_secondary_color">key_category_secondary_color</string>
    <string name="key_category_other_color">key_category_other_color</string>
    <string name="key_category_notification_color">key_category_notification_color</string>

    <string name="key_primary_color">key_primary_color</string>
    <string name="key_primary_light_color">key_primary_light_color</string>
    <string name="key_primary_dark_color">key_primary_dark_color</string>
    <string name="key_primary_text_color">key_primary_text_color</string>

    <string name="key_secondary_color">key_secondary_color</string>
    <string name="key_secondary_light_color">key_secondary_light_color</string>
    <string name="key_secondary_dark_color">key_secondary_dark_color</string>
    <string name="key_secondary_text_color">key_secondary_text_color</string>

    <string name="key_notification_background_color">key_notification_background_color</string>
    <string name="key_notification_text_music_title_color">key_notification_text_music_title_color</string>
    <string name="key_notification_text_music_artist_color">key_notification_text_music_artist_color</string>

    <string name="key_background_color">key_background_color</string>
    <string name="key_selected_color">key_selected_color</string>

    <string name="key_parcelable_data">key_parcelable_data</string>

    <!--Titles-->
    <string name="title_category_primary_color">Primary Color</string>
    <string name="title_category_secondary_color">Secondary Color</string>
    <string name="title_category_other_color">Other Color</string>
    <string name="title_category_notification_color">Notification Color</string>

    <string name="title_color">Base</string>
    <string name="title_light_color">Light</string>
    <string name="title_dark_color">Dark</string>
    <string name="title_text_color">Text</string>

    <string name="title_notification_text_music_title_color">Title</string>
    <string name="title_notification_text_music_artist_color">Artist</string>

    <string name="title_background_color">Background</string>
    <string name="title_selected_color">Selected</string>
    <string name="title_editmode_selected_color">Edit Mode Selected</string>

    <!--Summaries-->
    <string name="summary_color"></string>
    <string name="summary_light_color"></string>
    <string name="summary_dark_color"></string>
    <string name="summary_text_color"></string>

    <string name="summary_notification_background_color"></string>
    <string name="summary_notification_text_music_title_color"></string>
    <string name="summary_notification_text_music_artist_color"></string>

    <string name="summary_background_color"></string>
    <string name="summary_selected_color">Color of music playing in the list.</string>
    <string name="summary_editmode_selected_color">Color of musics selected when editing.</string>


    <!--Drawer Menu-->
    <string name="group_music">Musics/Playlists</string>
    <string name="group_database">Database</string>
    <string name="group_other">Other</string>
    <string name="add_playlist">Add musics</string>
    <string name="delete_playlist">Delete musics</string>
    <string name="sync_database">Sync database</string>
    <string name="settings">Settings</string>

    <!--Main Fragment-->
    <string name="search_box">Search…</string>
    <string name="search_button">-</string>

    <!--Category Fragment-->
    <string name="category_title">Categories</string>

    <!--Settings Fragment-->
    <string name="settings_title">Settings</string>
    <string name="themes_title">Themes</string>
    <string name="restart_button">Apply &amp; Restart</string>

    <!--New Playlist Dialog-->
    <string name="dialog_playlist_name">Playlist Name</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_add">Add</string>

    <!--Notification-->
    <string name="notification_title">Title</string>
    <string name="notification_artist">Artist</string>
    <string name="notification_previous">Previous</string>
    <string name="notification_play_pause">Play/Pause</string>
    <string name="notification_next">Next</string>

    <!--Recycler Row-->
    <string name="recycler_row_track">X</string>
    <string name="recycler_row_duration">%1$d:%2$s</string>
    <string name="recycler_row_title">Title</string>
    <string name="recycler_row_artist">Artist</string>

    <!--Accessibility-->
    <string name="desc_main_search_button">Next music found</string>
    <string name="desc_player_previous">Previous</string>
    <string name="desc_player_play">Play/Pause</string>
    <string name="desc_player_next">Next</string>
    <string name="desc_player_repeat">None/All/One</string>
    <string name="desc_player_sort">Track/Title/Random</string>
    <string name="desc_title">Title: %1$s</string>
    <string name="desc_artist">Artists: %1$s</string>
    <string name="desc_album">Album: %1$s</string>
    <string name="desc_total_duration">Total time: %1$d hours %2$d minutes %3$d seconds</string>
    <string name="desc_current_duration">Current time: %1$d hours %2$d minutes %3$d seconds</string>
    <string name="desc_playlists">Part of those playlists: %1$s</string>

    <!--Toast-->
    <string name="toast_reset_colors">Colors have been reset!</string>
    <string name="toast_folder_category">Not working yet!</string>
    <string name="toast_error">An error occurred!</string>
    <string name="toast_invalid_file">Invalid/Empty file!</string>
    <string name="toast_exportation_successful">Playlist exportation successful!</string>
    <string name="toast_importation_successful">Playlist importation successful!</string>
    <string name="toast_invalid_name">Invalid name!</string>

    <!--Tag-->
    <string name="categories_fragment_tag">categories_fragment_tag</string>
    <string name="lists_fragment_tag">lists_fragment_tag</string>

    <!--Theme-->
    <string name="key_category_theme">key_category_theme</string>
    <string name="category_theme_title">Themes</string>
    <string name="category_theme_subtitle">App restart is needed after changing the theme.</string>

    <string name="key_light_theme_pink">key_light_theme_pink</string>
    <string name="key_light_theme_blue">key_light_theme_blue</string>
    <string name="key_light_theme_green">key_light_theme_green</string>
    <string name="key_light_theme_yellow">key_light_theme_yellow</string>
    <string name="key_dark_theme_pink">key_dark_theme_pink</string>
    <string name="key_dark_theme_blue">key_dark_theme_blue</string>
    <string name="key_dark_theme_green">key_dark_theme_green</string>
    <string name="key_dark_theme_yellow">key_dark_theme_yellow</string>

    <string name="key_light_theme_default">key_light_theme_default</string>
    <string name="key_dark_theme_default">key_dark_theme_default</string>
    <string name="key_light_theme_sunset">key_light_theme_sunset</string>
    <string name="key_dark_theme_sunset">key_dark_theme_sunset</string>
    <string name="key_dark_theme_purple">key_dark_theme_purple</string>
    <string name="key_light_theme_purple">key_light_theme_purple</string>
    <string name="key_light_theme_leather_1">key_light_theme_leather_1</string>
    <string name="key_light_theme_leather_2">key_light_theme_leather_2</string>
    <string name="key_dark_theme_leather_1">key_dark_theme_leather_1</string>
    <string name="key_dark_theme_leather_2">key_dark_theme_leather_2</string>
    <string name="key_light_theme_mountain_1">key_light_theme_mountain_1</string>
    <string name="key_light_theme_mountain_2">key_light_theme_mountain_2</string>
    <string name="key_dark_theme_mountain_1">key_dark_theme_mountain_1</string>
    <string name="key_dark_theme_mountain_2">key_dark_theme_mountain_2</string>

    <string name="key_light_theme_terracotta_1">key_light_theme_terracotta_1</string>
    <string name="key_light_theme_terracotta_2">key_light_theme_terracotta_2</string>
    <string name="key_dark_theme_terracotta_1">key_dark_theme_terracotta_1</string>
    <string name="key_dark_theme_terracotta_2">key_dark_theme_terracotta_2</string>

    <string name="light_theme_pink_title">Light Pink</string>
    <string name="light_theme_blue_title">Light Blue</string>
    <string name="light_theme_green_title">Light Green</string>
    <string name="light_theme_yellow_title">Light Yellow</string>
    <string name="dark_theme_pink_title">Dark Pink</string>
    <string name="dark_theme_blue_title">Dark Blue</string>
    <string name="dark_theme_green_title">Dark Green</string>
    <string name="dark_theme_yellow_title">Dark Yellow</string>

    <string name="dark_theme_title">Dark Default</string>
    <string name="light_theme_title">Light Default</string>
    <string name="dark_theme_blue2_title">Dark Sunset</string>
    <string name="light_theme_blue2_title">Light Sunset</string>
    <string name="dark_theme_purple_title">Dark Purple</string>
    <string name="light_theme_purple_title">Light Purple</string>
    <string name="light_theme_leather_1_title">Light Leather 1</string>
    <string name="light_theme_leather_2_title">Light Leather 2</string>
    <string name="dark_theme_leather_1_title">Dark Leather 1</string>
    <string name="dark_theme_leather_2_title">Dark Leather 2</string>
    <string name="dark_theme_mountain_1_title">Dark Mountain 1</string>
    <string name="dark_theme_mountain_2_title">Dark Mountain 2</string>
    <string name="light_theme_mountain_1_title">Light Mountain 1</string>
    <string name="light_theme_mountain_2_title">Light Mountain 2</string>

    <string name="light_theme_terracotta_1_title">Terracotta Garden 1</string>
    <string name="light_theme_terracotta_2_title">Terracotta Garden 2</string>
    <string name="dark_theme_terracotta_1_title">Attocarret Garden 1</string>
    <string name="dark_theme_terracotta_2_title">Attocarret Garden 2</string>

    <string name="key_theme">key_theme</string>
    <string name="key_is_light_theme">key_is_light_theme</string>
</resources>