<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_music">
        <item
            android:id="@+id/subtitle_music"
            android:title="@string/group_music">
            <menu>
                <item
                    android:id="@+id/add_playlist"
                    android:icon="@drawable/ic_round_playlist_add_24"
                    android:title="@string/add_playlist" />
                <item
                    android:id="@+id/delete_playlist"
                    android:icon="@drawable/ic_round_delete_sweep_24"
                    android:title="@string/delete_playlist" />
            </menu>
        </item>
    </group>
    <group android:id="@+id/group_database">
        <item
            android:id="@+id/subtitle_database"
            android:title="@string/group_database">
            <menu>
                <item
                    android:id="@+id/sync_database"
                    android:icon="@drawable/ic_round_sync_24"
                    android:title="@string/sync_database" />
            </menu>
        </item>
    </group>
    <group android:id="@+id/group_other">
        <item
            android:id="@+id/subtitle_other"
            android:title="@string/group_other">
            <menu>
                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/ic_round_settings_24"
                    android:title="@string/settings" />
            </menu>
        </item>
    </group>
</menu>