<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notif_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="0dp"
        android:paddingEnd="12dp">

        <LinearLayout
            android:id="@+id/notif_layout_icon_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/notif_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@null"
                android:src="@drawable/round_music_note_24" />

            <TextView
                android:id="@+id/notif_app_name"
                style="@style/TextAppearance.Compat.Notification.Info"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/app_name" />

        </LinearLayout>

        <TextView
            android:id="@+id/notif_title"
            style="@style/TextAppearance.Compat.Notification.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/notification_title" />

        <TextView
            android:id="@+id/notif_artist"
            style="@style/TextAppearance.Compat.Notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/notification_artist" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/notif_previous"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:contentDescription="@string/notification_previous"
            android:src="@drawable/round_skip_previous" />

        <ImageView
            android:id="@+id/notif_play_pause"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/notification_play_pause"
            android:src="@drawable/round_play_arrow_24" />

        <ImageView
            android:id="@+id/notif_next"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/notification_next"
            android:src="@drawable/round_skip_next" />

    </LinearLayout>

    <!--<ImageView android:layout_alignParentBottom="true"
        android:id="@+id/notif_close"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginEnd="4dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/round_close_24"
        app:tint="#000000"/>-->

</LinearLayout>