<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:importantForAccessibility="no"
    android:paddingStart="4dp"
    android:paddingTop="4dp"
    android:paddingEnd="4dp"
    android:paddingBottom="4dp">

    <TextView
        android:id="@+id/main_item_track"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/recycler_row_track"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="8dp"
        android:text="@string/recycler_row_title"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/main_item_track"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_item_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/recycler_row_artist"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/main_item_track"
        app:layout_constraintTop_toBottomOf="@id/main_item_title" />

</androidx.constraintlayout.widget.ConstraintLayout>